[package]
name = "xna"
version = "0.1.0"
edition = "2024"

[dependencies]

thiserror = "*"

windows = { version = "0.61", features = ["Win32_Foundation", "Win32_System_LibraryLoader", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi", "Win32_System_Com", "Win32_Graphics_Dxgi", "Win32_Graphics_Direct3D11", "Win32_Graphics_Dxgi_Common"] }


